# QNX_Generic

./: .gitignore  CMakeLists.txt  LICENSE
docs/: README.md
src/include/: camera_wrapper.h  display.h  encoder.h  isp.h
src/src/: camera_wrapper.c  display.c  encoder.c  isp.c  main.c
